tests/negative/hof_two_arg.far
fun apply2(f: fn(i64, i64) -> i64, a: i64, b: i64) -> i64 {
  return f(a, b)
}

fun main() -> i64 {
  g = fn(a, b) { return a + b }
  return apply2(g, 3, 4)
}
